fix: fix CSS issues with search tool tips. Overlapping with portal services_autocomplete

--- a/core/component_portal/css/component_portal.less
+++ b/core/component_portal/css/component_portal.less
@@ -156,6 +156,14 @@
 			align-items: center;
 			white-space: pre-wrap;
 		}
+
+		&.active {
+			.tooltip {
+				top: calc(100% + 4rem);
+				z-index: 0;
+			}
+		}
+
 	}
 }//end &.component_portal, &.portal
 
